fixed documentation api call
