# backend/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/chemicals": {
+        "/api/v1/chemicals/": {
             "get": {
                 "description": "Get a list of all chemicals",
                 "produces": [
@@ -82,7 +82,7 @@
                 }
             }
         },
-        "/chemicals/{id}": {
+        "/api/v1/chemicals/{id}": {
             "get": {
                 "description": "Get a specific chemical by its ID",
                 "produces": [
@@ -208,7 +208,7 @@
                 }
             }
         },
-        "/users": {
+        "/api/v1/users": {
             "get": {
                 "description": "Get a list of all users",
                 "produces": [
@@ -286,86 +286,7 @@
                 }
             }
         },
-        "/users/check-password": {
-            "post": {
-                "description": "Compare a plain password with its hashed version",
-                "tags": [
-                    "users"
-                ],
-                "summary": "Check password hash",
-                "parameters": [
-                    {
-                        "description": "Plain password",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Hashed password",
-                        "name": "hash",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "True if passwords match",
-                        "schema": {
-                            "type": "boolean"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/users/hash": {
-            "post": {
-                "description": "Hash a given password using bcrypt",
-                "tags": [
-                    "users"
-                ],
-                "summary": "Hash a password",
-                "parameters": [
-                    {
-                        "description": "Password to hash",
-                        "name": "password",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Hashed password",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{id}": {
+        "/api/v1/users/{id}": {
             "get": {
                 "description": "Get a specific user by their ID",
                 "produces": [
